# inorbit-connector-template

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  pyproject.toml
.github/workflows/: flowcore_workflows.yml
config/: .gitignore  example.env  fleet.example.yaml
docker/: Dockerfile  build.sh
flowcore_connector/: __init__.py  flowcore_connector.py
flowcore_connector/src/: __init__.py  connector.py
flowcore_connector/src/config/: __init__.py  models.py
tests/: conftest.py  test_config_models.py
