# SPDX-FileCopyrightText: 2026 InOrbit, Inc.
#
# SPDX-License-Identifier: MIT

[project]
name = "flowcore-connector"
version = "0.1.0"
description = "InOrbit Edge connector for FLOWCore"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "InOrbit, Inc.", email = "support@inorbit.ai" },
]
maintainers = [
    { name = "InOrbit, Inc.", email = "support@inorbit.ai" },
]
keywords = ["inorbit", "connector", "edge-connector", "robotics", "robops", "flowcore"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "inorbit-connector[system-stats]~=2.2.0", # TODO: Replace with the latest version from https://github.com/inorbit-ai/inorbit-connector-python
    # Other runtime dependencies go here
]

[project.urls]
Homepage = "https://github.com/inorbit-ai/flowcore-connector"
Documentation = "https://github.com/inorbit-ai/flowcore-connector#readme"
Repository = "https://github.com/inorbit-ai/flowcore-connector"
Issues = "https://github.com/inorbit-ai/flowcore-connector/issues"

[project.optional-dependencies]
dev = [
    # TODO: Make sure to replace with the latest version of the tools
    "coverage~=7.11",
    "pytest~=8.4",
    "pytest-asyncio~=1.2",
    "tox~=4.32",
    "tox-uv~=1.29",
    "colorlog~=6.10.1",
    "ruff>=0.14.7",
    "bump-my-version~=1.2.4",
]

[project.scripts]
flowcore-connector = "flowcore_connector.flowcore_connector:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowcore_connector"]

[tool.coverage.run]
source = ["flowcore_connector/"]

[tool.coverage.report]
fail_under = 0

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.tox]
env_list = ["py313"]

[tool.tox.gh]
python = { "3.13" = "py313" }

[tool.tox.env_run_base]
extras = ["dev"]
commands = [
    [
        "ruff",
        "check",
    ],
    [
        "coverage",
        "run",
        "-m",
        "pytest",
    ],
    [
        "coverage",
        "html",
        "-d",
        "{envlogdir}/coverage",
    ],
]
